--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@popperjs/core": "^2.6.0",
+    "bootstrap": "^4.6.0",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-google-gtag": "^2.7.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
