--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@popperjs/core": "^2.6.0",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.3.0",
     "gatsby": "^2.26.1",
     "gatsby-plugin-google-gtag": "^2.7.0",
     "react": "^16.12.0",
