--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.6.0",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.0-beta1",
     "bootstrap-icons": "^1.3.0",
     "gatsby": "^2.26.1",
     "gatsby-plugin-google-gtag": "^2.7.0",
+    "gatsby-source-contentful": "^4.5.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.12.0"
