--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     "@popperjs/core": "^2.6.0",
     "bootstrap": "^5.0.0-beta1",
     "bootstrap-icons": "^1.3.0",
-    "gatsby": "^2.26.1",
-    "gatsby-plugin-google-gtag": "^2.7.0",
+    "gatsby": "^2.32.3",
     "gatsby-source-contentful": "^4.5.0",
-    "ol": "^6.5.0",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.4.3",
-    "react-dom": "^16.12.0"
+    "leaflet": "^1.7.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-leaflet": "^3.1.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
