--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "bootstrap": "^5.0.0-beta1",
     "bootstrap-icons": "^1.3.0",
     "gatsby": "^2.32.3",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-source-contentful": "^4.5.0",
+    "gatsby-transformer-sharp": "^2.12.0",
     "leaflet": "^1.7.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
