--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "bootstrap": "^5.0.0-beta1",
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-manifest": "^2.12.0",
+    "gatsby-plugin-offline": "^3.10.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-react-leaflet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-source-contentful": "^4.5.0",
     "gatsby-transformer-sharp": "^2.12.0",
     "leaflet": "^1.7.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
     "react-leaflet": "^3.1.0"
   },
   "devDependencies": {
